// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmDialogBox snapshots tests renders component with customised locale 1`] = `
<WithStyles(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <WithStyles(DialogTitle)>
    ENG: Confirmation
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)>
    <WithStyles(DialogContentText)>
      ENG: Are you sure?
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      autoFocus={true}
      color="primary"
      onClick={[Function]}
    >
      ENG: Yes
    </WithStyles(Button)>
    <WithStyles(Button)
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      ENG: No
    </WithStyles(Button)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests renders component with yes 1`] = `
<WithStyles(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <WithStyles(DialogTitle)>
    Confirmation
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)>
    <WithStyles(DialogContentText)>
      Are you sure?
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      autoFocus={true}
      color="primary"
      onClick={[Function]}
    >
      Yes
    </WithStyles(Button)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests renders component with yes/no buttons 1`] = `
<WithStyles(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <WithStyles(DialogTitle)>
    Confirmation
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)>
    <WithStyles(DialogContentText)>
      Are you sure?
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      autoFocus={true}
      color="primary"
      onClick={[Function]}
    >
      Yes
    </WithStyles(Button)>
    <WithStyles(Button)
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      No
    </WithStyles(Button)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests should show and hide confirmation dialog 1`] = `
<WithStyles(Dialog)
  open={true}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <WithStyles(DialogTitle)>
    Confirmation
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)>
    <WithStyles(DialogContentText)>
      Are you sure?
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      autoFocus={true}
      color="primary"
      onClick={[Function]}
    >
      Yes
    </WithStyles(Button)>
    <WithStyles(Button)
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      No
    </WithStyles(Button)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests should show and hide confirmation dialog 2`] = `
<WithStyles(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <WithStyles(DialogTitle)>
    Confirmation
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)>
    <WithStyles(DialogContentText)>
      Are you sure?
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      autoFocus={true}
      color="primary"
      onClick={[Function]}
    >
      Yes
    </WithStyles(Button)>
    <WithStyles(Button)
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      No
    </WithStyles(Button)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;
